apps/calibre-web/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre
spec:
  selector:
    app: calibre-web
  ports:
    - name: http
      targetPort: 8083
      port: 8083
