apps/calibre-web/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web
  namespace: calibre
spec:
  hostnames:
    - calibre.fuochi.top
  parentRefs:
    - name: star-fuochi-top
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: calibre-web
          port: 8083
      matches:
        - path:
            type: PathPrefix
            value: /
      # Needed by calibre-web to properly generate download links for kobo
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Scheme
                value: https
